@@ -19,6 +19,10 @@ What's New in Python 2.5 release candidate 2?
 Core and builtins
 -----------------
 
+- Bug #1542051: Exceptions now correctly call PyObject_GC_UnTrack.
+  Also make sure that every exception class has __module__ set to
+  'exceptions'.
+
 - Bug #1550983: emit better error messages for erroneous relative
   imports (if not in package and if beyond toplevel package).
 
